<resources>
    <string name="app_name">ZemogaApp</string>

    <!-- region Tab Layout -->
    <string name="all_tab_layout">All</string>
    <string name="favorites_tab_layout">Favorites</string>
    <!-- endregion -->
    <string name="zemoga_app">Zemoga App</string>
    <string name="author">Created by Diego.Urrea</string>
    <string name="unread">Unread</string>
    <string name="favorited">Favorited</string>
    <string name="posts">Posts</string>
    <string name="descriptionTitle">Description</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="user">User</string>
    <string name="empty_disclaimer">Oh no! This is empty, please press the refresh button !</string>
    <string name="empty_favorites">There\'s no favorited posts yet</string>
    <string name="no_connection">It looks like there no internet connection, please check</string>

</resources>